# Lite_Insta_Agilex_Slam

./: .gitignore  .gitmodules  README.md
docs/: hardware_topology.md  open_source_compliance.md  remote_visualization_plan.md  repository_organization.md
vcs/: external_repositories.md
x4_slam/: .gitignore  HARDWARE.md  IMPLEMENTATION_PLAN.md  README.md  environment.yml
x4_slam/config/: insta360X4_equirectangular.yaml  insta360X4_equirectangular_1024.yaml  insta360X4_equirectangular_1440.yaml  insta360X4_equirectangular_3840.yaml
x4_slam/config/rviz/: stella_slam_demo.rviz  stella_slam_remote_low_bandwidth.rviz
x4_slam/docs/: coworker_image_tf2_access.md  deployment_status.md  hardware_topology.md  remote_visualization_plan.md  slam_validation.md  troubleshooting.md
x4_slam/ros2_ws/src/insta360_ros_driver/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh
x4_slam/ros2_ws/src/insta360_ros_driver/config/: equirectangular.yaml  equirectangular_1024.yaml  equirectangular_1440.yaml  equirectangular_3840.yaml  equirectangular_org.yaml  imu_filter.yaml  insta360X4_equirectangular.yaml
x4_slam/ros2_ws/src/insta360_ros_driver/include/: equirectangular.hpp
x4_slam/ros2_ws/src/insta360_ros_driver/launch/: bringup.launch.xml
x4_slam/ros2_ws/src/insta360_ros_driver/scripts/: calibrate.py  equirectangular.py
x4_slam/ros2_ws/src/insta360_ros_driver/src/: decoder.cpp  equirectangular.cpp  main.cpp
x4_slam/ros2_ws/src/insta360_ros_driver/srv/: GetStampedImage.srv
x4_slam/ros2_ws/src/stella_vslam_ros/: CMakeLists.txt  Dockerfile  Dockerfile.cui  Dockerfile.socket
x4_slam/ros2_ws/src/stella_vslam_ros/.github/workflows/: main.yml
x4_slam/ros2_ws/src/stella_vslam_ros/src/: stella_vslam_ros.h
x4_slam/scripts/: build_ros_ws.sh  check_camera_usb.sh  check_slam_outputs.sh  ddgs_image_tf2_smoke_test.py  link_local_assets.sh  odom_to_tf.py  play_smoke_bag.sh  record_slam_bag.sh  request_stamped_image.py  run_bringup.sh  run_camera_driver.sh  run_remote_rviz_low_bandwidth.sh  run_sdk_demo.sh  run_slam.sh  run_slam_bag_demo.sh  run_slam_headless_1440.sh  run_slam_live_demo.sh  run_slam_live_demo_1024.sh  run_slam_live_demo_1440.sh
x4_slam/sdk/: README.md
